# rdma-core

./: .gitignore  CMakeLists.txt
libibverbs/: cmd_device.c  cmd_fallback.c  dummy_ops.c  dynamic_driver.c  ibverbs.h  init.c
libibverbs/examples/: devinfo.c
providers/scenic_ib/: CMakeLists.txt  coyote_rdma_abi.h  cthread_bridge.cpp  cthread_bridge.h  libscenic_ib.map  scenic_ib.c  scenic_ib.h
